--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,15 @@
 # Build results
 
 [Dd]ebug/
+[De]ebug_static_mt/
 [Rr]elease/
+[Rr]elease_static_mt/
 x64/
 build/
 [Bb]in/
 [Oo]bj/
+
+Library/release_static_mt/
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
