--- a/Library.vcxproj
+++ b/Library.vcxproj
@@ -86,6 +86,9 @@
   <ItemGroup>
     <ClCompile Include="src\Library.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Library.properties" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
