Convert to Visual Studio 2015 preview and tidy up output directories

--- a/testsuite/TestSuite.vcxproj
+++ b/testsuite/TestSuite.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="debug_static_mt|Win32">
       <Configuration>debug_static_mt</Configuration>
@@ -26,26 +26,26 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug_static_mt|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug_static_mt|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release_static_mt|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release_static_mt|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -86,13 +86,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>c:\openssl\include;..\poco-1.4.7-all\Crypto\include;C:\dev\cpp\poco-1.4.7-all\CppUnit\include;..\poco-1.4.7-all\NetSSL_OpenSSL\include;.\include;..\poco-1.4.7-all\util\include;..\poco-1.4.7-all\foundation\include;..\poco-1.4.7\net\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>c:\openssl-win64\include;..\poco-1.4.7p1-all\Crypto\include;C:\dev\cpp\poco-1.4.7p1-all\CppUnit\include;..\poco-1.4.7p1-all\NetSSL_OpenSSL\include;.\include;..\poco-1.4.7p1-all\util\include;..\poco-1.4.7p1-all\foundation\include;..\poco-1.4.7p1-all\net\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>POCO_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\dev\cpp\poco-1.4.7-all\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\dev\cpp\poco-1.4.7p1-all\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>Crypt32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
@@ -102,13 +102,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>c:\openssl\include;..\poco-1.4.7-all\Crypto\include;C:\dev\cpp\poco-1.4.7-all\CppUnit\include;..\poco-1.4.7-all\NetSSL_OpenSSL\include;.\include;..\poco-1.4.7-all\util\include;..\poco-1.4.7-all\foundation\include;..\poco-1.4.7\net\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>c:\openssl-win64\include;..\poco-1.4.7p1-all\Crypto\include;C:\dev\cpp\poco-1.4.7p1-all\CppUnit\include;..\poco-1.4.7p1-all\NetSSL_OpenSSL\include;.\include;..\poco-1.4.7p1-all\util\include;..\poco-1.4.7p1-all\foundation\include;..\poco-1.4.7p1-all\net\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>POCO_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\dev\cpp\poco-1.4.7-all\lib64;c:\OpenSSL\lib\VC\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\dev\cpp\poco-1.4.7p1-all\lib64;c:\OpenSSL-Win64\lib\VC;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>CppUnitmtd.lib;libeay32mtd.lib;ssleay32mtd.lib;Crypt32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
@@ -122,13 +122,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>POCO_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>c:\openssl\include;..\poco-1.4.7-all\Crypto\include;C:\dev\cpp\poco-1.4.7-all\CppUnit\include;..\poco-1.4.7-all\NetSSL_OpenSSL\include;.\include;..\poco-1.4.7-all\util\include;..\poco-1.4.7-all\foundation\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>c:\openssl-win64\include;..\poco-1.4.7p1-all\Crypto\include;C:\dev\cpp\poco-1.4.7p1-all\CppUnit\include;..\poco-1.4.7p1-all\NetSSL_OpenSSL\include;.\include;..\poco-1.4.7p1-all\util\include;..\poco-1.4.7p1-all\foundation\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\dev\cpp\poco-1.4.7-all\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\dev\cpp\poco-1.4.7p1-all\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>Crypt32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -141,13 +141,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>POCO_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>c:\openssl\include;..\poco-1.4.7-all\Crypto\include;C:\dev\cpp\poco-1.4.7-all\CppUnit\include;..\poco-1.4.7-all\NetSSL_OpenSSL\include;.\include;..\poco-1.4.7-all\util\include;..\poco-1.4.7-all\foundation\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>c:\openssl-win64\include;..\poco-1.4.7p1-all\Crypto\include;C:\dev\cpp\poco-1.4.7p1-all\CppUnit\include;..\poco-1.4.7p1-all\NetSSL_OpenSSL\include;.\include;..\poco-1.4.7p1-all\util\include;..\poco-1.4.7p1-all\foundation\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\dev\cpp\poco-1.4.7-all\lib64;c:\OpenSSL\lib\VC\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\dev\cpp\poco-1.4.7p1-all\lib64;c:\OpenSSL-Win64\lib\VC;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>CppUnitmt.lib;Crypt32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
