--- a/Library.vcxproj.filters
+++ b/Library.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\LoanExtractor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LibraryDateParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Library.properties">
@@ -38,6 +41,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\LoanExtractor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LibraryDateParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
